feat(css-support): add css-support to the generation process
see readme

fix #5

--- a/tests/expected-files/doc-w-tables/javascript-overview.html
+++ b/tests/expected-files/doc-w-tables/javascript-overview.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>javascript-overview</title></head><body><h1>JavaScript - overview</h1>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>javascript-overview</title></head><body><article><h1>JavaScript - overview</h1>
 <h2>organizations</h2>
 <h3>TC39</h3>
 <p><a href="http://www.ecma-international.org/memento/tc39.hhtml">TC39 webpage on www.ecma-international.org</a></p>
@@ -236,4 +236,4 @@
 <p><a href="https://medium.com/javascript-scene/top-javascript-frameworks-topics-to-learn-in-2017-700a397b7html">Top JavaScript Frameworks &amp; Topics to Learn in 2017 : Eric Elliot 20161210</a></p>
 <p><a href="https://medium.com/javascript-scene/learn-javascript-b631a4af11html">Learn JavaScript Essentials (for all skill levels) : Eric Elliot 20140803</a></p>
 <p><a href="https://medium.com/javascript-scene/10-priceless-resources-for-javascript-learners-bbf2f7d7f8html">10 Priceless Resources for JavaScript Learners : Eric Elliot 20160421</a></p>
-</body></html>
+</article></body></html>
