--- a/tests/expected-files/faq/SUMMARY.html
+++ b/tests/expected-files/faq/SUMMARY.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>SUMMARY</title></head><body><h1>FAQ Git pour developpez.com</h1>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>SUMMARY</title></head><body><article><h1>FAQ Git pour developpez.com</h1>
 <h2>1 Généralités</h2>
 <ul>
 <li><a href="section-001/001.q001.html">Qu’est ce que Git ?</a></li>
@@ -23,4 +23,4 @@
 <li><a href="section-004/004.q002.html">Comment ajouter un dépôt distant ?</a></li>
 <li><a href="section-004/004.q003.html">Comment inspecter un dépôt distant ?</a></li>
 </ul>
-</body></html>
+</article></body></html>
