--- a/tests/expected-files/faq/section-002/002.q002.html
+++ b/tests/expected-files/faq/section-002/002.q002.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>002.q002</title></head><body><h1>FAQ Git pour developpez.com</h1>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>002.q002</title></head><body><article><h1>FAQ Git pour developpez.com</h1>
 <h2>2 Installation et configuration</h2>
 <h3>Comment installer Git sur macOS ?</h3>
 <p>Il existe plusieurs façons d’installer Git sous macOS.</p>
@@ -7,4 +7,4 @@
 <li>La deuxième façon consiste à utiliser <a href="https://sourceforge.net/projects/git-osx-installehtml">Git-osx-install</a>. Téléchargez le fichier .dmg et lancez l’installation en suivant les instructions.</li>
 <li>La troisième façon consiste à utiliser <a href="https://brew.sh/index_html">Homebrew</a>. En supposant que <a href="https://brew.sh/index_html">Homebrew</a> soit installé, depuis un terminal saisir la ligne de commande =&gt; <code>brew install git</code>.</li>
 </ul>
-</body></html>
+</article></body></html>
