--- a/tests/expected-files/faq/section-004/004.q003.html
+++ b/tests/expected-files/faq/section-004/004.q003.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>004.q003</title></head><body><h1>FAQ Git pour developpez.com</h1>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>004.q003</title></head><body><article><h1>FAQ Git pour developpez.com</h1>
 <h2>4 Les dépôts distants (<em>remotes</em>)</h2>
 <h3>Comment inspecter un dépôt distant ?</h3>
 <pre><code class="bash">$ git remote show origin
@@ -13,4 +13,4 @@
   Référence locale configurée pour &#39;git push&#39; :
     master pousse vers master (à jour)</code></pre>
 <p>Affiche l’état du dépôt distant (<code>fetch</code> et <code>push</code>), liste des branches, si elles sont trackées ou non, branches locales configurées pour un <code>pull</code> et pour un <code>push</code>.</p>
-</body></html>
+</article></body></html>
