--- a/tests/expected-files/faq/section-002/002.q002.html
+++ b/tests/expected-files/faq/section-002/002.q002.html
@@ -4,7 +4,7 @@
 <p>Il existe plusieurs façons d’installer Git sous macOS.</p>
 <ul>
 <li>La première façon consiste à installer XCode qui inclut Git (Apple Git-xy). Depuis un terminal, saisir la ligne de commande =&gt; <code>xcode-select --install</code>.</li>
-<li>La deuxième façon consiste à utiliser <a href="https://sourceforge.net/projects/git-osx-installehtml">Git-osx-install</a>. Téléchargez le fichier .dmg et lancez l’installation en suivant les instructions.</li>
-<li>La troisième façon consiste à utiliser <a href="https://brew.sh/index_html">Homebrew</a>. En supposant que <a href="https://brew.sh/index_html">Homebrew</a> soit installé, depuis un terminal saisir la ligne de commande =&gt; <code>brew install git</code>.</li>
+<li>La deuxième façon consiste à utiliser <a href="https://sourceforge.net/projects/git-osx-installer/">Git-osx-install</a>. Téléchargez le fichier .dmg et lancez l’installation en suivant les instructions.</li>
+<li>La troisième façon consiste à utiliser <a href="https://brew.sh/index_fr">Homebrew</a>. En supposant que <a href="https://brew.sh/index_fr">Homebrew</a> soit installé, depuis un terminal saisir la ligne de commande =&gt; <code>brew install git</code>.</li>
 </ul>
 </article></body></html>
